--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "time-action",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@effector/next": "^0.5.1",
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "classnames": "^2.3.2",
-    "effector": "^22.8.6",
-    "effector-react": "^22.5.3",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.16",
-    "next": "13.4.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.65.1",
-    "typescript": "5.1.6"
-  }
+	"name": "time-action",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"docker:up": "docker-compose up -d",
+		"docker:down": "docker-compose down"
+	},
+	"dependencies": {
+		"@effector/next": "^0.5.1",
+		"@types/node": "20.5.0",
+		"@types/react": "18.2.20",
+		"@types/react-dom": "18.2.7",
+		"classnames": "^2.3.2",
+		"effector": "^22.8.6",
+		"effector-react": "^22.5.3",
+		"eslint": "8.47.0",
+		"eslint-config-next": "13.4.16",
+		"next": "13.4.16",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.10.1",
+		"sass": "^1.65.1",
+		"typescript": "5.1.6"
+	}
 }
